--- a/static/index.html
+++ b/static/index.html
@@ -58,6 +58,11 @@
           <button id="resetEditsBtn" class="rounded-md border border-slate-300 bg-white px-4 py-2 text-sm font-medium" disabled>Reset Edits</button>
           <span id="statusText" class="text-sm text-slate-600"></span>
         </div>
+        <div class="lg:col-span-4">
+          <div class="h-2 w-full overflow-hidden rounded-full bg-slate-200">
+            <div id="singleProgressBar" class="h-full w-0 bg-sky-500 transition-all"></div>
+          </div>
+        </div>
       </section>
 
       <section class="grid gap-6 xl:grid-cols-[320px_1fr]">
@@ -144,6 +149,9 @@
               Process Batch
             </button>
             <p id="batchStatus" class="mt-2 text-xs text-slate-600"></p>
+            <div class="mt-2 h-2 w-full overflow-hidden rounded-full bg-slate-200">
+              <div id="batchProgressBar" class="h-full w-0 bg-cyan-500 transition-all"></div>
+            </div>
           </div>
         </aside>
 
@@ -160,10 +168,16 @@
 
           <div id="canvasViewport" class="checkerboard relative h-[68vh] overflow-hidden rounded-lg border border-slate-200">
             <div id="canvasTransform" class="absolute left-0 top-0 origin-top-left" style="transform: translate(0px, 0px) scale(1)">
+              <canvas id="compareCanvas" class="absolute left-0 top-0"></canvas>
               <canvas id="editCanvas" class="absolute left-0 top-0"></canvas>
               <canvas id="overlayCanvas" class="pointer-events-none absolute left-0 top-0"></canvas>
             </div>
           </div>
+          <div class="mt-3">
+            <label for="compareSlider" class="mb-1 block text-xs font-semibold text-slate-700">Before / After Compare</label>
+            <input id="compareSlider" type="range" min="0" max="100" value="100" class="w-full" />
+          </div>
+          <p class="mt-2 text-xs text-slate-500">Shortcuts: B erase, E restore, W wand erase, P polygon erase, Z undo, Y redo, Space pan</p>
           <p class="mt-2 text-xs text-slate-500">Checkerboard means transparent pixels. Use polygon: click points, then "Close Polygon".</p>
         </section>
       </section>
