--- a/static/index.html
+++ b/static/index.html
@@ -153,6 +153,15 @@
               <div id="batchProgressBar" class="h-full w-0 bg-cyan-500 transition-all"></div>
             </div>
           </div>
+
+          <div class="rounded-xl border border-slate-200 bg-white p-4 shadow-sm">
+            <div class="flex items-center justify-between">
+              <h2 class="text-sm font-semibold text-slate-700">Failed Jobs</h2>
+              <button id="refreshFailedBtn" class="rounded-md border border-slate-300 px-2 py-1 text-xs">Refresh</button>
+            </div>
+            <p class="mt-1 text-xs text-slate-500">Retry failed jobs without re-upload.</p>
+            <div id="failedJobsList" class="mt-3 space-y-2 text-xs text-slate-700"></div>
+          </div>
         </aside>
 
         <section class="rounded-xl border border-slate-200 bg-white p-4 shadow-sm">
